# ClaudeSync

./: .claudeignore  .gitignore  AI-FIRST-DEVELOPMENT.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  ClaudeSync-How-To.md  LICENSE  MANIFEST.in  README.md  README.md~  SECURITY.md  ai-adoption-masterplan.md  ai-augmented-development.md  build-frontend.sh  build-script.sh  build.py  config.json  embedding.txt  file_upload_tool.py  known-issue-ssl-error.md  pyproject.toml  pytest.ini  renovate.json  requirements.txt  setup.py  test-script.sh  useful-prompts.md
.claudesync/: active_project.json  all-config.local.json  all.project.json  be.project.json  be.project_id.json  config.local.json  example-file-categories.json  fe.project.json  fe.project_id.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: close-stale-issues-and-prs.yml  pep8-check.yml  publish-to-pypi.yml  python-package.yml  python-publish.yml  renovate.yml  test-and-publish.yml
chats/57506f44-16c7-4a0d-aac8-43f4f770c6e7/: metadata.json
deprecated/: AI-FIRST-DEVELOPMENT.md
services/auth/: README.md
services/customer/: README.md
src/: .claudeignore  .gitignore  config.local.json
src/.claudesync/: config.local.json
src/claudesync/: __init__.py  api_utils.py  base_syncmanager.py  chat_sync.py  checksum_manager.py  claudesync.py  cli.py  compression.py  config_manager.py  debounce.py  exceptions.py  file_handler.py  file_watcher.py  gitignore_utils.py  main.py  manual_auth.py  one_way_syncmanager.py  provider_factory.py  session_key_manager.py  sync_manager.py  syncmanager.py  token_counter.py  two_way_syncmanager.py  utils.py
src/claudesync-copy/.claudesync/: _all.project.json  all.project.json  bla.project.json
src/claudesync-copy/.claudesync/test/: all.project.json
src/claudesync/cli/: __init__.py  api.py  auth.py  category.py  chat.py  config.py  export.py  file.py  hooks.py  main.py  organization.py  project.py  session.py  simulate.py  submodule.py  sync.py  sync_logic.py  tokens.py  zip.py
src/claudesync/cli/hook_templates/: pre_commit.py
src/claudesync/configmanager/: __init__.py  base_config_manager.py  file_config_manager.py  inmemory_config_manager.py
src/claudesync/providers/: base_claude_ai.py  base_provider.py  claude_ai.py  claude_ai_curl.py
src/claudesync/web/: README.md  angular.json  package-lock.json  package.json
src/claudesync/web/src/: index.html  styles.css
src/claudesync/web/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  drop-zone.component.css  drop-zone.component.html  drop-zone.component.ts  editable-config.component.css  editable-config.component.ts  file-data.service.ts  file-preview.component.css  file-preview.component.html  file-preview.component.ts  global-loading.component.ts  loading.service.ts  modal.component.css  modal.component.html  modal.component.ts  node-actions-menu.component.css  node-actions-menu.component.html  node-actions-menu.component.ts  notification.service.ts  project-dropdown.component.css  project-dropdown.component.html  project-dropdown.component.ts  toast-notifications.component.css  toast-notifications.component.html  toast-notifications.component.ts  treemap.component.css  treemap.component.html  treemap.component.ts  treemap.types.ts
testdir/: Hello.txt
tests/: logging_test_case.py  mock_http_server.py  mock_http_server_fixture.py  test_base.py  test_chat_happy_path.py  test_chat_sync.py  test_claude_ai.py  test_cli.py  test_config_manager.py  test_happy_path.py  test_inmemory_config_manager.py  test_main.py  test_organization.py  test_project.py  test_provider_factory.py  test_session_key_manager.py  test_sync.py  test_utils.py
tests/cli/: test_api.py  test_chat.py  test_main.py  test_organization.py  test_project.py  test_sync.py
tests/integration/: test-auth.py  test_auth.py
tests/integration/.claudesync/: test-project.project.json
tests/providers/: test_base_claude_ai.py  test_claude_ai.py  test_claude_ai_curl.py
