[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudesync"
version = "0.3.9"
authors = [
    {name = "Jahziah Wagner", email = "jahziah.wagner+pypi@gmail.com"},
]
description = "A tool to synchronize local files with Claude.ai projects"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Click",
    "requests",
    "pathspec",
    "crontab",
    "setuptools",
    "pytest",
    "pytest-cov",
    "click_completion",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/jahwag/claudesync"
"Bug Tracker" = "https://github.com/jahwag/claudesync/issues"

[project.scripts]
claudesync = "claudesync.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["claudesync*"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=claudesync --cov-report=term-missing"
