[project]
name = "claudesync"
version = "0.4.8"
authors = [
    {name = "Jahziah Wagner", email = "jahziah.wagner+pypi@gmail.com"},
]
description = "A tool to synchronize local files with Claude.ai projects"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Click>=8.1.7",
    "requests>=2.32.3",
    "pathspec>=0.12.1",
    "crontab>=1.0.1",
    "click_completion>=0.5.2",
    "tqdm>=4.66.4",
]
keywords = [
    "sync",
    "files",
    "Claude.ai",
    "automation",
    "synchronization",
    "project management",
    "file management",
    "cloud sync",
    "cli tool",
    "command line",
    "productivity",
    "development tools",
    "file synchronization",
    "continuous integration",
    "devops",
    "version control"
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jahwag/claudesync"
"Bug Tracker" = "https://github.com/jahwag/claudesync/issues"

[project.scripts]
claudesync = "claudesync.cli.main:cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["claudesync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=claudesync --cov-report=term-missing"
