[project]
name = "claudesync"
version = "0.7.4"
authors = [
    {name = "Jahziah Wagner", email = "540380+jahwag@users.noreply.github.com"},
]
description = "A tool to synchronize local files with Claude.ai projects"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.7",
    "click_completion>=0.5.2",
    "pathspec>=0.12.1",
    "pytest>=8.3.2",
    "python_crontab>=3.2.0",
    "setuptools>=73.0.1",
    "sseclient_py>=1.8.0",
    "tqdm>=4.66.5",
    "pytest-cov>=5.0.0",
    "crontab>=1.0.1",
    "python-crontab>=3.2.0",
    "Brotli>=1.1.0",
    "cryptography>=42.0.4",
]
keywords = [
    "sync",
    "files",
    "Claude.ai",
    "automation",
    "synchronization",
    "project management",
    "file management",
    "cloud sync",
    "cli tool",
    "command line",
    "productivity",
    "development tools",
    "file synchronization",
    "continuous integration",
    "devops",
    "version control"
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jahwag/claudesync"
"Bug Tracker" = "https://github.com/jahwag/claudesync/issues"

[project.scripts]
claudesync = "claudesync.cli.main:cli"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["claudesync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=claudesync --cov-report=term-missing"
